--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+}
+
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
